tests/snapshots/serialization__a_minimal_request_omits_unset_fields.snap
---
source: tests/serialization.rs
expression: render(&minimal_request()?)?
---
{
  "model": "provider/model",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Hello"
        }
      ]
    }
  ]
}
