tests/snapshots/serialization__minimal_error_data_omits_unset_fields.snap
---
source: tests/serialization.rs
expression: render(&minimal_error_data())?
---
{
  "kind": "cancelled",
  "message": "the call was cancelled",
  "retry": {
    "type": "never"
  }
}
